apps/helios/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helios
  labels:
    app.kubernetes.io/name: helios
    app.kubernetes.io/part-of: swissbrain
